--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@pinia/nuxt": "^0.9.0",
+    "@vueuse/core": "^12.2.0",
     "lucide-vue-next": "^0.469.0",
     "nuxt": "^3.15.0",
     "pinia": "^2.3.0",
