--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,16 +1,25 @@
-FROM node:lts
+# Base Image
+FROM node:18-alpine
 
-WORKDIR /app
+ARG UID=1000
+ARG GID=1000
 
-COPY package.json /app
+USER ${UID}:${GID}
+
+WORKDIR /usr/src/app
+
+COPY --chown=${UID}:${GID} package*.json ./
 
 RUN npm install
 
-COPY . /app
+COPY --chown=${UID}:${GID} . .
+
+RUN npm run build
 
 EXPOSE 3000
 
 CMD [ "npm", "run", "dev", "--","--host" ]
+
 
 # CMD [ "node", ".output/server/index.mjs" ]
 # FROM nginx:stable-alpine as production-stage
