--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ MONGO_ADMIN_USERNAME=dave
 MONGO_ADMIN_PASSWORD=secret24
 MONGO_URL=mongodb://${MONGO_ADMIN_USERNAME}:${MONGO_ADMIN_PASSWORD}@mongo:27017/
 MONGO_DB=sacco_db
+
+UID=1000
+GID=1000
