--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ MONGO_ADMIN_USERNAME=user
 MONGO_ADMIN_PASSWORD=password
 MONGO_URL=mongodb://${MONGO_ADMIN_USERNAME}:${MONGO_ADMIN_PASSWORD}@mongo:27017/
 MONGO_DB=database
+
+UID=1000
+GID=1000
