--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,11 +1,17 @@
-FROM node:lts
+# Base Image
+FROM node:18-alpine
+
+ARG UID=1000
+ARG GID=1000
+
+USER ${UID}:${GID}
 
 WORKDIR /app
 
-COPY package.json .
+COPY --chown=${UID}:${GID} package*.json /app
 
 RUN npm install
 
-COPY . .
+COPY --chown=${UID}:${GID} . /app
 
 CMD ["npm", "run", "dev"]
