--- a/front/package.json
+++ b/front/package.json
@@ -13,9 +13,13 @@
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@pinia/nuxt": "^0.9.0",
     "@vueuse/core": "^12.2.0",
+    "axios": "^1.7.9",
     "lucide-vue-next": "^0.469.0",
+    "moment": "^2.30.1",
     "nuxt": "^3.15.0",
     "pinia": "^2.3.0",
+    "pinia-plugin-persistedstate": "^4.2.0",
+    "uuid": "^11.0.3",
     "vue": "latest",
     "vue-router": "latest"
   },
