--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
     "start": "node ./src/index.js",
     "dev": "nodemon ./src/index.js",
     "seed": "node ./src/seeders/index.js",
+    "secrets": "node ./src/utils/secrets.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
