--- a/api/.env.example
+++ b/api/.env.example
@@ -5,3 +5,7 @@ MONGO_ADMIN_PASSWORD=admin_pass
 MONGO_DB=db
 MONGO_URL="mongodb://user:admin_pass@mongo:27017/db?authSource=admin"
 NODE_ENV=development
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASSWORD=
