--- a/api/package.json
+++ b/api/package.json
@@ -25,8 +25,11 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.0",
     "fs": "^0.0.1-security",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.0",
+    "nodemailer": "^6.9.16",
+    "nodemailer-express-handlebars": "^6.1.2",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
