update gitignore, update container name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,7 @@ services:
 
   mailhog:
     image: mailhog/mailhog
+    container_name: sacco-mailhog
     ports:
       - "8025:8025"
       - "1025:1025"
